ejercicio16/deployment-password-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-api
  labels:
    app: password-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password-api
  template:
    metadata:
      labels:
        app: password-api
    spec:
      containers:
      - name: password-api
        image: nicopaez/password-api:2.0.1
        ports:
        - containerPort: 3000
