ejercicio16/service-password-api.yml
kind: Service
apiVersion: v1
metadata:
  name: password-api
  labels:
    app: password-api
spec:
  selector:
    app: password-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
