ejercicio16/service-pingapp.yml
kind: Service
apiVersion: v1
metadata:
  name: pingapp
  labels:
    app: pingapp
spec:
  selector:
    app: pingapp
  ports:
  - protocol: TCP
    port: 4567
    targetPort: 4567
  type: ClusterIP
